--- a/templates/index.html
+++ b/templates/index.html
@@ -8,27 +8,90 @@
     <title>Document</title>
     <link rel="stylesheet" href="..\static\css\index.css">
 </head>
-<body>
-<h1>Электромонтажные работы!</h1>
-<a href="https://vk.com/svetoch_penza?from=groups">наша группа в контакте</a>
-<p>Наша дружная команда предлагает весь спектр услуг по электромонтажным работам в г. Пенза</p>
-<p class="red-text">Класс красный текст</p>
+<body class="background">
+<h1>Тег №1 h1</h1>
+<div>
+<a href="https://vk.com/svetoch_penza?from=groups">Teг №2 а</a>
+</div>
+<p>Тег №3 p</p>
+<p class="red-text">Тег №4 p с классом красный текст</p>
+<p><b>Тег №5 p жирный b</b></p>
+<p><i>Тег №6 p курсив i</i></p>
+<div>
 <ul>
-    <li>Первый Элемент</li>
-    <li>Второй Элемент</li>
+    <li>Тег №7 элемент списка ul, li</li>
+
 </ul>
+
 <ol>
-    <li>Первый Элемент</li>
-    <li>Второй Элемент</li>
+    <li>Тег №8 элемент списка ol, li</li>
+
 </ol>
+</div>
 <div>
 <button>
-    тыкни на меня!
+    Тег №9 кнопка
 </button>
 </div>
-<p><b>Сегодня</b> отличный <i>день</i></p>
+<p></p>
 <div>
 <img src="static/img/i.webp" alt="Электромонтаж щитка">
+    <p>Тег №10 картинка img</p>
+
+<article>Тег №11 article</article>
+<audio src="static/music/msc.mp3" controls></audio>
 </div>
+<p>Тег №12 музыка audio</p>
+<hr>
+<p>Тег №13 горизонтальная линия hr</p>
+<div>
+<input>
+</div>
+<p>Тег №14 ввод текста input hr</p>
+<p><u>Тег №15 u</u></p>
+
+<table>
+    <tr>
+        <td>Основы Python</td>
+        <td>GIT</td>
+        <td>Linux</td>
+        <td>Алгоритмы</td>
+        <td>БД</td>
+        <td>РВП</td>
+        <td>Flask</td>
+        <td>Django</td>
+    </tr>
+    <tr>
+        <td>97%</td>
+        <td>98%</td>
+        <td>95%</td>
+        <td>90%</td>
+        <td>90%</td>
+        <td>92%</td>
+        <td>10%</td>
+        <td>0%</td>
+    </tr>
+    <tr>
+        <td>100%</td>
+        <td>100%</td>
+        <td>100%</td>
+        <td>100%</td>
+        <td>100%</td>
+        <td>100%</td>
+        <td>10%</td>
+        <td>0%</td>
+    </tr>
+    <tr>
+        <td>Очень много ошибок в лекциях, но ДЗ интересно выполнять</td>
+        <td>Интересная, полезная тема</td>
+        <td>Интересная, полезная тема</td>
+        <td>Тема полезная, но совершенно не интересная</td>
+        <td>Интересная, полезная тема, побольше бы практики</td>
+        <td>Тема не интересная, не понятная, нет живых примеров</td>
+        <td>Интересная тема, очень полезная</td>
+        <td>0%</td>
+    </tr>
+</table>
+
 </body>
 </html>
