шаблоны и формы flask

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,13 @@
     <link rel="stylesheet" href="..\static\css\index.css">
 </head>
 <body class="background">
+{% block content %}
+{% endblock %}
+<div>
+<button>
+    <a href="/дневник_программиста">Дневник программиста</a>
+</button>
+</div>
 <h1>Тег №1 h1</h1>
 <div>
 <a href="https://vk.com/svetoch_penza?from=groups">Teг №2 а</a>
