--- a/templates/notes.html
+++ b/templates/notes.html
@@ -89,6 +89,7 @@
                     <tr>
                         <th>Заголовок</th>
                         <th>Текст</th>
+                        <th>Удаление</th>
 
                     </tr>
                 </thead>
@@ -97,6 +98,12 @@
                     <tr>
                         <td><strong>{{ note.title }}</strong></td>
                         <td>{{ note.text }}</td>
+                        <td><form action="{{ url_for('delete_note', note_id=note.id) }}" method="POST" style="display: inline;">
+                    <button type="submit" class="delete-btn" onclick="return confirm('Удалить эту запись?')">
+                        Удалить
+                    </button>
+                </form></td>
+
 
                     </tr>
                     {% endfor %}
